sgd/reproduction/playground/objects/SVMXC__Skill__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Skill record defines the expertise required during service delivery. For example, a CTI product company may define Network Assessment, CISCO router setup etc. as various skills. Skill definition is used in service group definition and can be used when assigning a service order to a service group or group member considering their skill levels.</description>
    <fields>
        <fullName>SMAX_PS_Product_Owner__c</fullName>
        <label>製品オーナー</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1001</fullName>
                    <label>HOR</label>
                </value>
                <value>
                    <fullName>1002</fullName>
                    <label>HII</label>
                </value>
                <value>
                    <fullName>1003</fullName>
                    <label>ME</label>
                </value>
                <value>
                    <fullName>1004</fullName>
                    <label>STEC</label>
                </value>
                <value>
                    <fullName>1005</fullName>
                    <label>HAT</label>
                </value>
                <value>
                    <fullName>1006</fullName>
                    <label>HFR</label>
                </value>
                <value>
                    <fullName>1007</fullName>
                    <label>HTS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Segment__c</fullName>
        <label>セグメント</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this skill is currently active and available for use</description>
        <inlineHelpText>Indicates if this skill is currently active and available for use</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Description__c</fullName>
        <description>Detailed description of the skill</description>
        <inlineHelpText>Detailed description of the skill</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used in ServiceMax screens to manage record selection</description>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Skill_Area__c</fullName>
        <description>Indicates where this skill is applicable, in the field or depot or both</description>
        <inlineHelpText>Indicates where this skill is applicable, in the field or depot or both</inlineHelpText>
        <label>Skill Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field Service</fullName>
                </value>
                <value>
                    <fullName>Depot Repair</fullName>
                </value>
                <value>
                    <fullName>Field And Depot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Skill_Category__c</fullName>
        <description>Indicates the type of skill. This helps in grouping similar types of skills for reporting purposes.</description>
        <inlineHelpText>Indicates the type of skill. This helps in grouping similar types of skills for reporting purposes.</inlineHelpText>
        <label>Skill Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1001</fullName>
                    <label>機器別スキル</label>
                </value>
                <value>
                    <fullName>1002</fullName>
                    <label>入門資格</label>
                </value>
                <value>
                    <fullName>9999</fullName>
                    <label>その他</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Skill_Level_High__c</fullName>
        <description>Benchmark for the maximum level of proficiency for this skill</description>
        <inlineHelpText>Benchmark for the maximum level of proficiency for this skill</inlineHelpText>
        <label>Skill Level – High</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Skill_Level_Low__c</fullName>
        <description>Benchmark for the minimum level of proficiency for this skill</description>
        <inlineHelpText>Benchmark for the minimum level of proficiency for this skill</inlineHelpText>
        <label>Skill Level – Low</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Skill_Level_Medium__c</fullName>
        <description>Benchmark for the average level of proficiency for this skill</description>
        <inlineHelpText>Benchmark for the average level of proficiency for this skill</inlineHelpText>
        <label>Skill Level – Medium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Skill</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SMAX_PS_Segment__c</columns>
        <columns>SMAX_PS_Product_Owner__c</columns>
        <columns>SVMXC__Skill_Category__c</columns>
        <columns>SVMXC__Skill_Level_High__c</columns>
        <columns>SVMXC__Skill_Level_Medium__c</columns>
        <columns>SVMXC__Skill_Level_Low__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>